@@ -28,6 +28,7 @@
 - LWJGL3 Fix: Stereo audio can now be played on mono output devices. This may also improve downmixing to stereo and upmixing to surround.
 - API Addition: Added CheckBox#getImageDrawable.
 - FIX: HexagonalTiledMapRenderer now displays maps with the correct stagger index.
+- API Addition: Added I18NBundle#keys() method.
 - TOOLS Features: Save mode can be changed in Flame particle 3D editor.
 
 [1.11.0]
